quick fix for github bug with forwardslash

--- a/styles/main.css
+++ b/styles/main.css
@@ -48,7 +48,7 @@ p {
   text-align: center;
 }
 
-.linkstoblog {
+.links-to-blog {
   text-align: left;
   padding-top: 10rem;
   padding-left: 5rem;
