Added margin to bottom of page for spacing

--- a/styles/main.css
+++ b/styles/main.css
@@ -55,6 +55,7 @@ main {
   margin: auto;
   background-color: rgb(234, 234, 234);
   margin-top: 4rem;
+  margin-bottom: 10rem;
 }
 
 .links-to-blog {
